<resources>
    <string name="app_name">TMS</string>
    <string name="confirm">подтвердить</string>
    <string name="enter_the_number">введите число</string>
    <string name="countdown_time">время обратного отсчета</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dz14">dz14</string>
    <string name="dz15">Dz15</string>
    <string name="textRange">Введите число в диапазоне от 5 до 155</string>
    <string name="band">введите число от 25 до 100</string>
    <string name="check">Проверить</string>
    <string name="notification">уведомление</string>
    <string name="dz16">DZ16</string>
    <string name="inputNumber">Введите число</string>
    <string name="count">посчитать</string>
    <string name="info">info</string>
    <string name="numberB">число Б</string>
    <string name="numberC">число C</string>
    <string name="numberA">число А</string>
    <string name="nameDz">TextView</string>
</resources>