<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonsFragment">


    <Button
        android:id="@+id/btnDz14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dz14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDz15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dz15"
        app:layout_constraintEnd_toEndOf="@+id/btnDz14"
        app:layout_constraintStart_toStartOf="@+id/btnDz14"
        app:layout_constraintTop_toBottomOf="@+id/btnDz14" />

    <Button
        android:id="@+id/btnDz16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dz16"
        app:layout_constraintEnd_toEndOf="@+id/btnDz15"
        app:layout_constraintStart_toStartOf="@+id/btnDz15"
        app:layout_constraintTop_toBottomOf="@+id/btnDz15" />
</androidx.constraintlayout.widget.ConstraintLayout>