<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dz16.Dz16Fragment">

    <EditText
        android:id="@+id/ptInputNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/inputNumber"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/count"
        app:layout_constraintEnd_toEndOf="@+id/ptInputNumber"
        app:layout_constraintStart_toStartOf="@+id/ptInputNumber"
        app:layout_constraintTop_toBottomOf="@+id/ptInputNumber" />

    <TextView
        android:id="@+id/tvIsEven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnCount"
        app:layout_constraintStart_toStartOf="@+id/btnCount"
        app:layout_constraintTop_toBottomOf="@+id/btnCount" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsEven">

        <EditText
            android:id="@+id/ptNumberA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/numberA"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/ptNumberB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/numberB"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/ptNumberC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/numberC"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnCount2"
        app:layout_constraintStart_toStartOf="@+id/btnCount2"
        app:layout_constraintTop_toBottomOf="@+id/btnCount2" />

</androidx.constraintlayout.widget.ConstraintLayout>